# Carbor

./: .gitignore  AUTHORS.md  CHANGELOG-1.0.3.md  CHANGELOG.md  CODE_OF_CONDUCT-1.0.3.md  CONTRIBUTING-1.0.3.md  GITHUB-AUTOMATISIERUNG.md  INSTALL.md  MANIFEST-1.0.3.json  PRIVACY.md  PROJEKTSTRUKTUR-1.0.3.txt  PUBLISHING-1.0.3.md  PUBLISHING.md  README-1.0.3.md  README.md  RELEASE_CHECKLIST.md  SECURITY-1.0.3.md  SHA256SUMS  THIRD_PARTY_NOTICES-1.0.3.md  carbor_git_automation_install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-check.yml
docs/: VERSIONIERUNG-1.0.3.md  VERSIONIERUNG.md  WINDOWS-PORT-1.0.3.md
help/: Carbor-Hilfe-1.0.3.html  Carbor-Hilfe.html
packaging/linux/: README.md  carbor.desktop
packaging/windows/: README.md
scripts/: build_release_zip.sh  check_secrets.py  copy_to_target.sh  github_preflight.sh  github_publish.sh  init_git.sh
src/: carbor_v108.py
